# AI_tech_application_buct

./: .gitignore  Makefile  PLAN.md  README.md
design/: condition_set_design.md
m-learn/: .gitignore  Cargo.toml  README.md  README_CN.md  REST_API_PLAN.md
m-learn/crates/draw/: Cargo.toml
m-learn/crates/draw/src/: lib.rs
m-learn/crates/formula/src/: lib.rs  normal.rs
m-learn/crates/genetic/: Cargo.toml
m-learn/crates/genetic/src/: crossover.rs  genetic.rs  lib.rs  selection.rs
m-learn/crates/nn/: Cargo.toml  README.md
m-learn/crates/nn/src/: layers.rs  lib.rs  loss.rs  module.rs  nn.rs  optim.rs  sequential.rs  trainer.rs
m-learn/crates/optim/: Cargo.toml
m-learn/crates/optim/src/: lib.rs  pool.rs  task.rs  tokio_tests.rs
m-learn/crates/tensor/: Cargo.toml
m-learn/crates/tensor/src/: activation.rs  display.rs  lib.rs  new.rs  operator.rs  tensor.rs
m-learn/crates/tensor/tests/: test_reshape.rs
m-learn/docs/: activation_design.md  autograd_design.md  genetic_design.md  nn-architecture-design.md  nn_design.md
m-learn/example/draw-example/src/: main.rs
m-learn/example/formula-draw-example/src/: main.rs
m-learn/example/genetic-example/: Cargo.toml
m-learn/example/genetic-example/src/: ackley.rs  main.rs  rastrigin_variant.rs
m-learn/example/regression-example/: Cargo.toml
m-learn/example/regression-example/src/: linear_regression.rs  main.rs  quadratic_regression.rs  sin_regression.rs
m-learn/example/rest-api/: Cargo.toml
m-learn/example/rest-api/src/: main.rs  models.rs  task_manager.rs
m-learn/example/tensor-example/src/: main.rs
(+154 files in other folders)
